# dj-shop-cart

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  README.md  conftest.py  draft.md  index.html  justfile  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
cart/: api.py  apps.py  cart.py  context_processors.py  models.py  storages.py  utils.py
codeofconduct/: index.html
contributing/: index.html
dj_shop_cart/: apps.py  cart.py  conf.py  context_processors.py  models.py  modifiers.py  protocols.py  storages.py  utils.py
dj_shop_cart/migrations/: 0002_rename_items_cart_data.py
djcart/: __init__.py  apps.py  cart.py  context_processor.py  models.py  settings.py  utils.py
docs/: conf.py  contributing.md  index.md  usage.md
example/: README.md  db.sqlite3  manage.py  pyproject.toml
example/cart/: apps.py  cart.py  conf.py  models.py  protocols.py  settings.py  storages.py  typing.py  utils.py
example/cart/migrations/: 0001_initial.py
example/core/: admin.py  apps.py  models.py  views.py
example/core/fixtures/: core.json
example/core/migrations/: 0001_initial.py  0002_rename_productmodel_product_and_more.py
example/core/templates/core/: index.html
example/example/: asgi.py  settings.py  urls.py  wsgi.py
example/templates/: index.html
license/: index.html
search/: search_index.json
tests/: conftest.py  factories.py  models.py  settings.py  test_cart.py  test_storages.py
tests/migrations/: 0001_initial.py
usage/: index.html
