[tool.poetry]
name = "dj-shop-cart"
version = "7.1.0"
description = "Simple django cart manager for your django projects."
authors = ["Tobi DEGNON <tobidegnon@protonmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Tobi-De/dj-shop-cart"
homepage = "https://tobi-de.github.io/dj-shop-cart/"
keywords = ["django", "python", "cart", "shop", "ecommerce"]
packages = [
    { include = "dj_shop_cart" },
    { include = "dj_shop_cart/migrations" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "Natural Language :: English",
]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0"
attrs = "^23.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-django = "^4.8.0"
mypy = "^1.10.0"
pre-commit = "^3.7.1"
black = "^24.4.2"
isort = "^5.13.2"
django-stubs = "^5.0.2"
factory-boy = "^3.3.0"
ipython = "^8.25.0"
redis = "^5.0.4"
hiredis = "^2.3.2"
pytest-pretty = "^1.2.0"

[tool.black]
target-version = ['py37']

[tool.isort]
profile = "black"
add_imports = "from __future__ import annotations"

[tool.mypy]
mypy_path = "dj_shop_cart/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[tool.pytest.ini_options]
addopts = "--ds=tests.settings --reuse-db"
python_files = ["tests.py", "test_*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
