[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dj-shop-cart"
version = "8.0.0a1"
description = "Simple django cart manager for your django projects."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["django", "python", "cart", "shop", "ecommerce"]
authors = [
  { name = "Tobi-De", email = "tobidegnon@proton.me" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Framework :: Django :: 3.0",
  "Framework :: Django :: 3.1",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.0",
  "Framework :: Django :: 4.1",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Intended Audience :: Developers",
  "Natural Language :: English",
]
dependencies = ["Django>=3", "attrs>=23.2.0"]

[project.urls]
Documentation = "https://github.com/Tobi-De/dj_shop_cart#readme"
Issues = "https://github.com/Tobi-De/dj_shop_cart/issues"
Source = "https://github.com/Tobi-De/dj_shop_cart"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-django",
  "mypy",
  "pre-commit",
  "django-stubs",
  "factory-boy",
  "ipython",
  "redis",
  "hiredis",
  "pytest-pretty"
]

[tool.hatch.envs.docs]
dependencies = [
  "shibuya",
  "myst-parser",
  "sphinx-autobuild",
  "sphinx-design",
]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:dj_shop_cart tests}"

[tool.coverage.run]
source_pkgs = ["dj_shop_cart", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
dj_shop_cart = ["dj_shop_cart"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
mypy_path = "dj_shop_cart/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[tool.pytest.ini_options]
addopts = "--ds=tests.settings --reuse-db"
python_files = ["tests.py", "test_*.py"]