[tool.poetry]
name = "example"
version = "0.1.1"
description = ""
authors = ["Tobi DEGNON <degnonfrancis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
